--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,8 @@ body {
         font-size: 1.4rem; } }
 
 .footer__image {
-  width: 5rem; }
+  width: 5rem;
+  padding-bottom: 1rem; }
   @media (min-width: 768px) {
     .footer__image {
       width: 8rem; } }
@@ -209,24 +210,35 @@ body {
 
 .carousel-index {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   text-align: center;
   padding: 1.25rem; }
   .carousel-index img {
-    width: 100%; }
+    width: 85%;
+    border-radius: 1.5rem;
+    padding-top: 1rem;
+    margin-bottom: 0; }
+    @media (min-width: 768px) {
+      .carousel-index img {
+        width: 65%; } }
+    @media (min-width: 1024px) {
+      .carousel-index img {
+        width: 70%; } }
 
 .nav2 {
-  background-color: #ffd3ca;
-  padding: 0.5rem; }
+  background-color: #ffd3ca; }
 
 .estampadosNav2 {
   display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: space-evenly;
-  align-items: flex-start; }
+  align-items: flex-start;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem; }
   .estampadosNav2 select {
-    font-size: 1.1rem; }
+    font-size: 1.1rem;
+    border-radius: 0.5rem; }
   .estampadosNav2 label {
     font-size: 1.1rem; }
   .estampadosNav2 h3 {
@@ -250,24 +262,24 @@ body {
       text-align: center;
       justify-content: flex-start;
       padding-top: 2rem;
-      padding-left: 1rem; }
+      padding-left: 1rem;
+      padding-right: 1rem; }
       .estampadosNav2 span {
         padding-top: 0.375rem; }
       .estampadosNav2 label {
         font-size: 1.4rem; }
       .estampadosNav2 div {
         padding-bottom: 1.5rem; } }
-
-.checkboxDiseños {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: flex-start; }
-  @media (min-width: 768px) {
-    .checkboxDiseños {
-      display: flex;
-      flex-direction: column;
-      text-align: center; } }
+  .estampadosNav2 .checkboxDiseños {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: flex-start; }
+    @media (min-width: 768px) {
+      .estampadosNav2 .checkboxDiseños {
+        display: flex;
+        flex-direction: column;
+        text-align: center; } }
 
 #productos h2 a {
   font-size: 1.5rem;
@@ -277,6 +289,8 @@ body {
       font-size: 1.8rem; } }
 
 #aside {
+  background-color: #ffd3ca;
+  padding-top: 1rem;
   display: flex;
   flex-direction: column;
   text-align: center; }
@@ -289,12 +303,14 @@ body {
     #aside {
       display: flex;
       flex-direction: column;
-      text-align: center; } }
+      text-align: center;
+      justify-content: space-around; } }
   #aside figcaption {
     font-size: 1rem;
     font-weight: bolder;
-    margin-top: 0.375rem;
-    margin-bottom: 0.375rem; }
+    margin-top: 0.3rem;
+    margin-bottom: 0.3rem;
+    padding: 1rem; }
 
 img {
   width: 20%; }
@@ -306,19 +322,8 @@ img {
       width: 65%; } }
 
 .row {
-  justify-content: center; }
-
-.card {
-  align-items: center;
-  width: 90%;
-  background-color: #fcd7cb; }
-  @media (min-width: 768px) {
-    .card {
-      height: 100%;
-      margin: 0; } }
-  @media (min-width: 1024px) {
-    .card {
-      width: 100%; } }
+  display: flex;
+  justify-content: space-around; }
 
 .catalogoProductos {
   margin: 0.25rem; }
@@ -335,6 +340,18 @@ img {
   .catalogoProductos article {
     display: flex; }
 
+.card {
+  align-items: center;
+  width: 100%;
+  background-color: #fcd7cb; }
+  @media (min-width: 768px) {
+    .card {
+      height: 100%;
+      margin: 0; } }
+  @media (min-width: 1024px) {
+    .card {
+      width: 100%; } }
+
 .card-body {
   display: flex;
   flex-direction: column;
@@ -350,7 +367,7 @@ img {
       .card-body h4 {
         font-size: 1.5rem; } }
   .card-body p {
-    font-size: 1rem;
+    font-size: 1.3rem;
     margin: 0;
     line-height: 2rem; }
     .card-body p b {
@@ -364,9 +381,14 @@ img {
       .card-body p {
         line-height: 2.5rem; } }
 
+.card-title {
+  text-align: center;
+  font-weight: bolder; }
+
 .card-img-top {
   padding-top: 0.25rem;
-  width: 70%; }
+  width: 70%;
+  border-radius: 0.4rem; }
   @media (min-width: 1024px) {
     .card-img-top {
       width: 100%; } }
@@ -405,39 +427,36 @@ img {
     @media (min-width: 1024px) {
       .galeria_disenios h2 {
         font-size: 2.2rem; } }
-
-.encabezadoCarousel {
-  width: 69%;
-  font-size: 1.4rem;
-  font-weight: bolder;
-  margin-top: 0.625rem;
-  margin-bottom: 0;
-  background-color: #d9b6bd; }
-  @media (min-width: 768px) {
-    .encabezadoCarousel {
-      font-size: 1.8rem;
-      width: 67%;
-      margin-top: 1rem; } }
-  @media (min-width: 1024px) {
-    .encabezadoCarousel {
-      font-size: 2rem;
-      width: 71%;
-      margin-top: 2rem; } }
-
-.carousel {
-  width: 80%;
-  margin-bottom: 2rem; }
-  @media (min-width: 768px) {
-    .carousel {
-      margin-bottom: 4rem; } }
-
-.carousel-inner img {
-  width: 16.25rem;
-  height: 6.875rem; }
-  @media (min-width: 768px) {
-    .carousel-inner img {
-      width: 37.5rem;
-      height: 15rem; } }
+  .galeria_disenios .encabezadoCarousel {
+    width: 69%;
+    font-size: 1.4rem;
+    font-weight: bolder;
+    margin-top: 0.625rem;
+    margin-bottom: 0;
+    background-color: #d9b6bd; }
+    @media (min-width: 768px) {
+      .galeria_disenios .encabezadoCarousel {
+        font-size: 1.8rem;
+        width: 67%;
+        margin-top: 1rem; } }
+    @media (min-width: 1024px) {
+      .galeria_disenios .encabezadoCarousel {
+        font-size: 2rem;
+        width: 71%;
+        margin-top: 2rem; } }
+  .galeria_disenios .carousel {
+    width: 80%;
+    margin-bottom: 2rem; }
+    @media (min-width: 768px) {
+      .galeria_disenios .carousel {
+        margin-bottom: 4rem; } }
+  .galeria_disenios .carousel-inner img {
+    width: 16.25rem;
+    height: 6.875rem; }
+    @media (min-width: 768px) {
+      .galeria_disenios .carousel-inner img {
+        width: 37.5rem;
+        height: 15rem; } }
 
 .sobreMi__article {
   display: flex;
@@ -452,7 +471,8 @@ img {
   padding: 1.25rem 1.25rem;
   box-sizing: border-box;
   padding-top: 0.25rem;
-  line-height: 1.8rem; }
+  line-height: 1.8rem;
+  border-radius: 0.5rem; }
   .sobreMi__article b {
     font-size: 1rem; }
   @media (min-width: 768px) {
@@ -461,76 +481,104 @@ img {
       line-height: 3rem; }
       .sobreMi__article b {
         font-size: 1.5rem; } }
+  .sobreMi__article .sobreMi__article--fotoMarian {
+    width: 9.375rem;
+    padding-bottom: 1.25rem;
+    padding-top: 1.25rem;
+    border-radius: 0.5rem; }
+    @media (min-width: 768px) {
+      .sobreMi__article .sobreMi__article--fotoMarian {
+        width: 18.75rem; } }
 
-.sobreMi__article--fotoMarian {
-  width: 9.375rem;
-  padding-bottom: 1.25rem;
-  padding-top: 1.25rem; }
-  @media (min-width: 768px) {
-    .sobreMi__article--fotoMarian {
-      width: 18.75rem; } }
+.cuadroAclaracion {
+  margin: 0;
+  padding: 0; }
+  .cuadroAclaracion p {
+    background-color: #ff8173;
+    font-size: 1.2rem;
+    font-weight: bolder;
+    color: white;
+    text-align: center;
+    margin-bottom: 2rem;
+    padding: 1.5rem;
+    border-radius: 0.5rem; }
+    @media (min-width: 768px) {
+      .cuadroAclaracion p {
+        font-size: 1.8rem; } }
 
-span p {
-  background-color: #ff8173;
-  font-size: 1.3rem;
-  font-weight: bolder;
-  color: white;
-  text-align: center;
-  margin: 2.2rem;
-  padding: 0.625rem; }
-  @media (min-width: 768px) {
-    span p {
-      font-size: 1.8rem;
-      padding: 2.1rem; } }
-  @media (min-width: 1024px) {
-    span p {
-      margin: 0.5rem;
-      padding: 1.5rem; } }
-
-.card-title {
-  text-align: center;
-  font-weight: bolder; }
-
-#preguntasFrecuentes article {
-  padding-bottom: 1.25rem; }
-
-.section_contacto {
-  padding-left: 2rem;
-  padding-right: 2rem; }
-  @media (min-width: 768px) {
-    .section_contacto {
-      margin: 1.875rem;
-      padding: 0.4rem; } }
-  @media (min-width: 1024px) {
-    .section_contacto {
-      margin: 0.75rem; } }
-
-#formularioContacto {
-  padding-top: 0.625rem;
+.cardFaqs1 {
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-size: 1.4rem;
-  background-color: #d9b6bd; }
+  align-items: center;
+  background-color: #fcd7cb;
+  margin-bottom: 2rem;
+  border-radius: 0.5rem; }
+  @media (min-width: 768px) {
+    .cardFaqs1 {
+      margin-bottom: 0;
+      width: 45%; } }
+  .cardFaqs1 img {
+    width: 50%;
+    margin-top: 1rem;
+    border-radius: 0.5rem; }
+    @media (min-width: 768px) {
+      .cardFaqs1 img {
+        width: 60%; } }
+  @media (min-width: 768px) {
+    .cardFaqs1 article {
+      padding: 1.5rem; } }
 
-.form-check {
-  margin-bottom: 1rem; }
+.cardFaqs2 {
+  align-items: center;
+  background-color: #fcd7cb;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 0.5rem; }
+  .cardFaqs2 img {
+    width: 50%;
+    margin-top: 1rem;
+    border-radius: 0.5rem; }
+    @media (min-width: 768px) {
+      .cardFaqs2 img {
+        width: 60%; } }
+  .cardFaqs2 article {
+    padding-bottom: 1.5rem;
+    padding-right: 0;
+    padding-left: 0; }
+    @media (min-width: 768px) {
+      .cardFaqs2 article {
+        padding: 1.5rem; } }
 
-article {
-  justify-content: center; }
-  article h2 {
-    font-size: 2rem; }
-
-.img-thumbnail {
+#formularioContacto {
   width: 100%;
-  height: 100%; }
-
-#imgFormulario {
+  font-size: 1.4rem;
   background-color: #d9b6bd;
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem; }
-  #imgFormulario img {
-    padding: 0; }
+  padding: 0;
+  margin: 0;
+  border-radius: 0.4rem;
+  margin-bottom: 1rem; }
+  #formularioContacto article {
+    justify-content: center; }
+    #formularioContacto article h2 {
+      font-size: 2rem; }
+    #formularioContacto article form {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      padding-top: 1rem; }
+  #formularioContacto legend {
+    padding-top: 1.5rem; }
+  #formularioContacto textarea {
+    margin-top: 1rem; }
+  #formularioContacto .form-check {
+    margin-top: 0.625rem; }
+  #formularioContacto .img-thumbnail {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    border: 0; }
 
 .error404 {
   padding: 3.125rem 1.25rem;
