--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,22 +1,33 @@
 .carousel-index {
-  @include flex(row, center);
+  @include flex(column, center);
   padding: 1.25rem;
   img {
-    width: 100%;
+    width: 85%;
+    border-radius: 1.5rem;
+    padding-top: 1rem;
+    margin-bottom: 0;
+    @media (min-width: 768px) {
+      width: 65%;
+    }
+    @media (min-width: 1024px) {
+      width: 70%;
+    }
   }
 }
 
 .nav2 {
   background-color: map-get($map: $paleta, $key: "tres");
-  padding: 0.5rem;
 }
 
 .estampadosNav2 {
   @include flex(row, center);
   justify-content: space-evenly;
   align-items: flex-start;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
   select {
     font-size: 1.1rem;
+    border-radius: 0.5rem;
   }
   label {
     font-size: 1.1rem;
@@ -44,6 +55,7 @@
     justify-content: flex-start;
     padding-top: 2rem;
     padding-left: 1rem;
+    padding-right: 1rem;
     span {
       padding-top: 0.375rem;
     }
@@ -54,19 +66,18 @@
       padding-bottom: 1.5rem;
     }
   }
-}
-
-.checkboxDiseños {
-  @include flex(column, center);
-  align-items: flex-start;
-  @media (min-width: 768px) {
+  .checkboxDiseños {
     @include flex(column, center);
+    align-items: flex-start;
+    @media (min-width: 768px) {
+      @include flex(column, center);
+    }
   }
 }
 
 #productos {
-  h2{
-    a{
+  h2 {
+    a {
       font-size: 1.5rem;
       text-decoration: none;
       @media (min-width: 768px) {
@@ -77,18 +88,22 @@
 }
 
 #aside {
+  background-color: map-get($map: $paleta, $key: "tres");
+  padding-top: 1rem;
   @include flex(column, center);
   @media (min-width: 768px) {
     @include flex(row, center);
   }
   @media (min-width: 1024px) {
     @include flex(column, center);
+    justify-content: space-around;
   }
   figcaption {
     font-size: 1rem;
     font-weight: bolder;
-    margin-top: 0.375rem;
-    margin-bottom: 0.375rem;
+    margin-top: 0.3rem;
+    margin-bottom: 0.3rem;
+    padding: 1rem;
   }
 }
 img {
@@ -102,21 +117,10 @@ img {
 }
 
 .row {
-  justify-content: center;
+  display: flex;
+  justify-content: space-around;
 }
 
-.card {
-  align-items: center;
-  width: 90%;
-  background-color: map-get($map: $paleta, $key: "ocho");
-  @media (min-width: 768px) {
-    height: 100%;
-    margin: 0;
-  }
-  @media (min-width: 1024px) {
-    width: 100%;
-  }
-}
 .catalogoProductos {
   margin: 0.25rem;
   h3 {
@@ -135,6 +139,19 @@ img {
   }
 }
 
+.card {
+  align-items: center;
+  width: 100%;
+  background-color: map-get($map: $paleta, $key: "ocho");
+  @media (min-width: 768px) {
+    height: 100%;
+    margin: 0;
+  }
+  @media (min-width: 1024px) {
+    width: 100%;
+  }
+}
+
 .card-body {
   @include flex(column, center);
   justify-content: space-around;
@@ -149,7 +166,7 @@ img {
     }
   }
   p {
-    font-size: 1rem;
+    font-size: 1.3rem;
     margin: 0;
     line-height: 2rem;
     b {
@@ -167,9 +184,15 @@ img {
   }
 }
 
+.card-title {
+  text-align: center;
+  font-weight: bolder;
+}
+
 .card-img-top {
   padding-top: 0.25rem;
   width: 70%;
+  border-radius: 0.4rem;
   @media (min-width: 1024px) {
     width: 100%;
   }
@@ -211,41 +234,39 @@ img {
       font-size: 2.2rem;
     }
   }
-}
-
-.encabezadoCarousel {
-  width: 69%;
-  font-size: 1.4rem;
-  font-weight: bolder;
-  margin-top: 0.625rem;
-  margin-bottom: 0;
-  background-color: map-get($map: $paleta, $key: "cinco");
-  @media (min-width: 768px) {
-    font-size: 1.8rem;
-    width: 67%;
-    margin-top: 1rem;
+  .encabezadoCarousel {
+    width: 69%;
+    font-size: 1.4rem;
+    font-weight: bolder;
+    margin-top: 0.625rem;
+    margin-bottom: 0;
+    background-color: map-get($map: $paleta, $key: "cinco");
+    @media (min-width: 768px) {
+      font-size: 1.8rem;
+      width: 67%;
+      margin-top: 1rem;
+    }
+    @media (min-width: 1024px) {
+      font-size: 2rem;
+      width: 71%;
+      margin-top: 2rem;
+    }
   }
-  @media (min-width: 1024px) {
-    font-size: 2rem;
-    width: 71%;
-    margin-top: 2rem;
+  .carousel {
+    width: 80%;
+    margin-bottom: 2rem;
+    @media (min-width: 768px) {
+      margin-bottom: 4rem;
+    }
   }
-}
 
-.carousel {
-  width: 80%;
-  margin-bottom: 2rem;
-  @media (min-width: 768px) {
-    margin-bottom: 4rem;
-  }
-}
-
-.carousel-inner img {
-  width: 16.25rem;
-  height: 6.875rem;
-  @media (min-width: 768px) {
-    width: 37.5rem;
-    height: 15rem;
+  .carousel-inner img {
+    width: 16.25rem;
+    height: 6.875rem;
+    @media (min-width: 768px) {
+      width: 37.5rem;
+      height: 15rem;
+    }
   }
 }
 
@@ -261,6 +282,7 @@ img {
   box-sizing: border-box;
   padding-top: 0.25rem;
   line-height: 1.8rem;
+  border-radius: 0.5rem;
   b {
     font-size: 1rem;
   }
@@ -271,91 +293,117 @@ img {
       font-size: 1.5rem;
     }
   }
-}
-
-.sobreMi__article--fotoMarian {
-  width: 9.375rem;
-  padding-bottom: 1.25rem;
-  padding-top: 1.25rem;
-  @media (min-width: 768px) {
-    width: 18.75rem;
-  }
-}
-
-span p {
-  background-color: map-get($map: $paleta, $key: "seis");
-  font-size: 1.3rem;
-  font-weight: bolder;
-  color: map-get($map: $paleta, $key: "nueve");
-  text-align: center;
-  margin: 2.2rem;
-  padding: 0.625rem;
-  @media (min-width: 768px) {
-    font-size: 1.8rem;
-    padding: 2.1rem;
-  }
-  @media (min-width: 1024px) {
-    margin: 0.5rem;
-    padding: 1.5rem;
-  }
-}
-
-.card-title {
-  text-align: center;
-  font-weight: bolder;
-}
-
-#preguntasFrecuentes {
-  article {
+  .sobreMi__article--fotoMarian {
+    width: 9.375rem;
     padding-bottom: 1.25rem;
+    padding-top: 1.25rem;
+    border-radius: 0.5rem;
+    @media (min-width: 768px) {
+      width: 18.75rem;
+    }
   }
 }
 
-.section_contacto {
-  padding-left: 2rem;
-  padding-right: 2rem;
-  @media (min-width: 768px) {
-    margin: 1.875rem;
-    padding: 0.4rem;
+.cuadroAclaracion {
+  margin: 0;
+  padding: 0;
+  p {
+    background-color: map-get($map: $paleta, $key: "seis");
+    font-size: 1.2rem;
+    font-weight: bolder;
+    color: map-get($map: $paleta, $key: "nueve");
+    text-align: center;
+    margin-bottom: 2rem;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    @media (min-width: 768px) {
+      font-size: 1.8rem;
+    }
   }
-  @media (min-width: 1024px) {
-    margin: 0.75rem;
+}
+
+.cardFaqs1 {
+  @include flex(column, center);
+  align-items: center;
+  background-color: map-get($map: $paleta, $key: "ocho");
+  margin-bottom: 2rem;
+  border-radius: 0.5rem;
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+    width: 45%;
+  }
+  img {
+    width: 50%;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    @media (min-width: 768px) {
+      width: 60%;
+    }
+  }
+  article {
+    @media (min-width: 768px) {
+      padding: 1.5rem;
+    }
+  }
+}
+
+.cardFaqs2 {
+  align-items: center;
+  background-color: map-get($map: $paleta, $key: "ocho");
+  @include flex(column, center);
+  border-radius: 0.5rem;
+  img {
+    width: 50%;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    @media (min-width: 768px) {
+      width: 60%;
+    }
+  }
+  article {
+    padding-bottom: 1.5rem;
+    padding-right: 0;
+    padding-left: 0;
+    @media (min-width: 768px) {
+      padding: 1.5rem;
+    }
   }
 }
 
 #formularioContacto {
-  padding-top: 0.625rem;
-  @include flex(column, center);
+  width: 100%;
   font-size: 1.4rem;
   background-color: map-get($map: $paleta, $key: "cinco");
-}
-
-.form-check {
+  padding: 0;
+  margin: 0;
+  border-radius: 0.4rem;
   margin-bottom: 1rem;
-}
-
-article {
-  justify-content: center;
-  h2 {
-    font-size: 2rem;
+  article {
+    justify-content: center;
+    h2 {
+      font-size: 2rem;
+    }
+    form {
+      @include flex(column, center);
+      padding-top: 1rem;
+    }
   }
-}
-
-.img-thumbnail {
-  width: 100%;
-  height: 100%;
-}
-
-#imgFormulario {
-  background-color: map-get($map: $paleta, $key: "cinco");
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-  img {
+  legend {
+    padding-top: 1.5rem;
+  }
+  textarea {
+    margin-top: 1rem;
+  }
+  .form-check {
+    margin-top: 0.625rem;
+  }
+  .img-thumbnail {
+    width: 100%;
+    height: 100%;
     padding: 0;
+    border: 0;
   }
 }
-
-//Page "Error 404"
 
 .error404 {
   h1 {
